fix: brolken skills list on mobile

--- a/src/app/projects/Projects.module.sass
+++ b/src/app/projects/Projects.module.sass
@@ -9,7 +9,7 @@
   display: grid
   grid-template-columns: repeat(3, 1fr)
   gap: 30px
-  margin-bottom: 2rem
+  margin-bottom: 1rem
   justify-items: center
 
   @media (max-width: 50rem)
