--- a/src/components/SkillsList/SkillsList.module.sass
+++ b/src/components/SkillsList/SkillsList.module.sass
@@ -4,6 +4,12 @@
   grid-template-columns: repeat(3, 1fr)
   padding: 0 1rem
 
+  @media (max-width: 60rem)
+    grid-template-columns: repeat(2, 1fr)
+
+  @media (max-width: 40rem)
+    grid-template-columns: 1fr
+
   li
     margin: 0
     display: flex
